<?xml version="1.0" encoding="utf-8"?>
<!--S1826060-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/item_ll"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">
            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1.5"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/traffic_Icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/traficicon">
                    </ImageView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="7"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/location_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:maxLines="2"
                            android:text="@string/initial_data"
                            android:textColor="@android:color/black"
                            android:textSize="18sp">
                        </TextView>
                        <TextView
                            android:id="@+id/textsubHeadDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:maxLines="1"
                            android:text="@string/day"
                            android:textColor="@android:color/black"
                            android:textSize="18sp">
                        </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1.5"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/playBtn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_play_arrow_black_24dp">
                    </ImageView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

</LinearLayout>