<?xml version="1.0" encoding="utf-8"?>
<!--S1826060-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginRight="30dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/traficicon">

            </ImageView>

            <TextView
                android:id="@+id/Event_name"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/titleDataMap"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_fill_the_information"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_fill_the_information"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_fill_the_information"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:id="@+id/delay_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_fill_the_information"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"></TextView>


                <TextView
                    android:id="@+id/link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_fill_the_information"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:id="@+id/publication_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_fill_the_information"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"></TextView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>